force-app/main/default/objects/Contact/fields/CPF__c.field-meta.xml
<CustomField>
    <fullName>CPF__c</fullName>
    <description>Brazilian national ID (CPF) for the contact. Format: XXX.XXX.XXX-XX.</description>
    <inlineHelpText>Brazilian CPF for the individual contact.</inlineHelpText>
    <label>CPF</label>
    <length>18</length>
    <type>Text</type>
</CustomField>