force-app/main/default/objects/Contact/fields/DNI__c.field-meta.xml
<CustomField>
    <fullName>DNI__c</fullName>
    <description>Argentine national ID (DNI) for the contact. Format: XX.XXX.XXX.</description>
    <inlineHelpText>Argentine DNI for the individual contact.</inlineHelpText>
    <label>DNI</label>
    <length>15</length>
    <type>Text</type>
</CustomField>