force-app/main/default/objects/Contact/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <description>Preferred locale for voice / chat interactions with this contact.</description>
    <inlineHelpText>es-AR or pt-BR.</inlineHelpText>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>es-AR</fullName>
                <default>true</default>
                <label>es-AR</label>
            </value>
            <value>
                <fullName>pt-BR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>